<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>moonlight.ws</groupId>
	<artifactId>moonlight.ws.rs</artifactId>
	<version>2.5.3-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<jakarta.annotation-api.version>2.1.0</jakarta.annotation-api.version>
		<jakarta.ejb-api.version>4.0.1</jakarta.ejb-api.version>
		<jakarta.enterprise.cdi-api.version>4.0.1</jakarta.enterprise.cdi-api.version>
		<jakarta.inject-api.version>2.0.1</jakarta.inject-api.version>
		<jakarta.persistence-api.version>3.2.0</jakarta.persistence-api.version>
		<jakarta.servlet-api.version>6.0.0</jakarta.servlet-api.version>
		<jakarta.validation-api.version>3.0.2</jakarta.validation-api.version>
		<jakarta.ws.rs-api.version>3.1.0</jakarta.ws.rs-api.version>
		<keycloak.version>25.0.3</keycloak.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.source>17</maven.compiler.source>
	</properties>

	<modules>
		<module>mlws.api</module>
		<module>mlws.base</module>
		<module>mlws.business</module>
		<module>mlws.healthcheck.cli</module>
		<module>mlws.hibernate</module>
		<module>mlws.keycloak</module>
		<module>mlws.liferay</module>
		<module>mlws.persistence</module>
		<module>mlws.rs</module>
	</modules>
	
	<profiles>
		<profile>
			<id>mlws.wildfly</id>
			<modules>
				<module>mlws.wildfly</module>
			</modules>
		</profile>
	</profiles>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>moonlight.ws</groupId>
				<artifactId>mlws.api</artifactId>
				<version>2.5.3-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>moonlight.ws</groupId>
				<artifactId>mlws.base</artifactId>
				<version>2.5.3-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>moonlight.ws</groupId>
				<artifactId>mlws.business</artifactId>
				<version>2.5.3-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>moonlight.ws</groupId>
				<artifactId>mlws.hibernate</artifactId>
				<version>2.5.3-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>moonlight.ws</groupId>
				<artifactId>mlws.keycloak</artifactId>
				<version>2.5.3-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>moonlight.ws</groupId>
				<artifactId>mlws.liferay</artifactId>
				<version>2.5.3-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>moonlight.ws</groupId>
				<artifactId>mlws.persistence</artifactId>
				<version>2.5.3-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>moonlight.ws</groupId>
				<artifactId>mlws.webservice</artifactId>
				<version>2.5.3-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>2.20</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>2.20.1</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>2.20.1</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>jakarta.annotation</groupId>
				<artifactId>jakarta.annotation-api</artifactId>
				<version>${jakarta.annotation-api.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>jakarta.enterprise</groupId>
				<artifactId>jakarta.enterprise.cdi-api</artifactId>
				<version>${jakarta.enterprise.cdi-api.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>jakarta.ejb</groupId>
				<artifactId>jakarta.ejb-api</artifactId>
				<version>${jakarta.ejb-api.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>jakarta.inject</groupId>
				<artifactId>jakarta.inject-api</artifactId>
				<version>${jakarta.inject-api.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>jakarta.servlet</groupId>
				<artifactId>jakarta.servlet-api</artifactId>
				<version>${jakarta.servlet-api.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>jakarta.validation</groupId>
				<artifactId>jakarta.validation-api</artifactId>
				<version>${jakarta.validation-api.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>jakarta.ws.rs</groupId>
				<artifactId>jakarta.ws.rs-api</artifactId>
				<version>${jakarta.ws.rs-api.version}</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>jakarta.persistence</groupId>
				<artifactId>jakarta.persistence-api</artifactId>
				<version>${jakarta.persistence-api.version}</version>
			</dependency>

			<dependency>
				<groupId>com.liferay</groupId>
				<artifactId>com.liferay.headless.admin.address.client</artifactId>
				<version>1.0.23</version>
			</dependency>
			<dependency>
				<groupId>com.liferay.commerce</groupId>
				<artifactId>com.liferay.headless.commerce.admin.catalog.client</artifactId>
				<version>4.0.57</version>
			</dependency>
			<dependency>
				<groupId>com.liferay.commerce</groupId>
				<artifactId>com.liferay.headless.commerce.admin.channel.client</artifactId>
				<version>4.0.40</version>
			</dependency>
			<dependency>
				<groupId>com.liferay.commerce</groupId>
				<artifactId>com.liferay.headless.commerce.admin.inventory.client</artifactId>
				<version>4.0.38</version>
			</dependency>
			<dependency>
				<groupId>com.liferay.commerce</groupId>
				<artifactId>com.liferay.headless.commerce.admin.order.client</artifactId>
				<version>4.0.46</version>
			</dependency>
			<dependency>
				<groupId>com.liferay.commerce</groupId>
				<artifactId>com.liferay.headless.commerce.admin.shipment.client</artifactId>
				<version>1.0.35</version>
			</dependency>

			<dependency>
				<groupId>org.jboss.ejb3</groupId>
				<artifactId>jboss-ejb3-ext-api</artifactId>
				<version>2.4.0.Final</version>
			</dependency>

			<dependency>
				<groupId>org.keycloak</groupId>
				<artifactId>keycloak-adapter-core</artifactId>
				<version>${keycloak.version}</version>
			</dependency>
			<dependency>
				<groupId>org.keycloak</groupId>
				<artifactId>keycloak-adapter-spi</artifactId>
				<version>${keycloak.version}</version>
			</dependency>
			<dependency>
				<groupId>org.keycloak</groupId>
				<artifactId>keycloak-core</artifactId>
				<version>${keycloak.version}</version>
			</dependency>
			<dependency>
				<groupId>org.keycloak</groupId>
				<artifactId>keycloak-policy-enforcer</artifactId>
				<version>${keycloak.version}</version>
			</dependency>

			<dependency>
				<groupId>org.liquibase</groupId>
				<artifactId>liquibase-core</artifactId>
				<version>4.27.0</version>
			</dependency>
			<dependency>
				<groupId>org.postgresql</groupId>
				<artifactId>postgresql</artifactId>
				<version>42.7.7</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>1.18.40</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>2.0.17</version>
				<scope>provided</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.13.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>5.13.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.weld</groupId>
			<artifactId>weld-junit5</artifactId>
			<version>5.0.1.Final</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.jupiter</groupId>
					<artifactId>junit-jupiter-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.jboss.weld</groupId>
			<artifactId>weld-junit-common</artifactId>
			<version>5.0.1.Final</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.27.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>5.19.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.3.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.13.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>3.1.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.4.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.3.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.4.0</version>
					<configuration>
						<argLine>
							--add-opens=java.base/java.net=ALL-UNNAMED
							--add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED
						</argLine>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-war-plugin</artifactId>
					<version>3.4.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
